terraform/modules/security/securitygroups.tf
# 1. Public Security Group (For ALB)
resource "aws_security_group" "alb_sg" {
  name        = "public-alb-sg"
  description = "Allow HTTP inbound traffic from the internet"
  vpc_id      = var.vpc_id

  ingress {
    description = "HTTP from anywhere"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# 2. Private Security Group (For EC2 in ASG)
resource "aws_security_group" "ec2_sg" {
  name        = "private-ec2-sg"
  description = "Allow HTTP inbound traffic ONLY from ALB"
  vpc_id      = var.vpc_id

  ingress {
    description     = "HTTP from ALB"
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_sg.id] 
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
